# org.muhkuh.tools-flasher

./: .gitignore  .gitmodules  .travis.yml  ChangeLog  Jenkinsfile  Jenkinsfile_1step  Jenkinsfile_2step  README.asciidoc  SConstruct  build.bat  build.properties.template  build_artifact.py  buildoutput.txt  cfi_flash.c  dependency-log.xml  gen_version.bat  gitVersionManager.py  netx.py  parflash_common.c  pom.xml  readme.gitVersionManager.asciidoc  setup.py  setup.xml  setup2html.xsl
.github/workflows/: main.yml
bootpins_netx90/: bootpins.lua  readme_bootpins.txt
cmake/: cli_args.py
cmake/toolchainfiles/: toolchain_ubuntu_arm64.cmake  toolchain_ubuntu_armhf.cmake  toolchain_ubuntu_riscv64.cmake  toolchain_windows_64.cmake
cmake/tools/: get_dependencies.sh
doc/: cli_flasher_changelog.txt  flasher.txt
doc/ImplementationDetails/: USIP-Handling.plantuml  flasher_detect_secure_boot_mode.plantuml
flasher-environment/: CMakeLists.txt  build_artifact.py
flasher-environment/cmake/: muhkuh_swig_lua_runtime.cmake  platform.cmake  version.cmake
flasher-environment/cmake/tests/: mingw_dll_dependencies.py
flasher-environment/cmake/toolchainfiles/: toolchain_ubuntu_arm64.cmake  toolchain_ubuntu_armhf.cmake  toolchain_ubuntu_riscv64.cmake  toolchain_windows_32.cmake
flasher-environment/cmake/tools/: apply_patches.py  generate_hash.py  get_dependencies.sh  patch.py
flasher-environment/com.github.hoelzro-lua-term/: CMakeLists.txt  __README__.txt
flasher-environment/com.github.hoelzro-lua-term/copy-over/: CMakeLists.txt
flasher-environment/com.github.keplerproject-luafilesystem/: CMakeLists.txt  __README__.txt
flasher-environment/com.github.keplerproject-luafilesystem/copy_over/: CMakeLists.txt
flasher-environment/com.github.lunarmodules-Penlight/: CMakeLists.txt
flasher-environment/com.github.lunarmodules-luaexpat/: CMakeLists.txt
flasher-environment/com.github.lunarmodules-luaexpat/expat/: CMakeLists.txt  __README__.txt
flasher-environment/com.github.lunarmodules-luaexpat/luaexpat/: CMakeLists.txt  README.txt
flasher-environment/com.github.lunarmodules-luaexpat/luaexpat/copy_over/: CMakeLists.txt
flasher-environment/com.github.moteus-lua-log/: CMakeLists.txt
flasher-environment/com.github.mpeterv-argparse/: CMakeLists.txt
flasher-environment/com.github.tieske-date/: CMakeLists.txt
flasher-environment/libusb/: CMakeLists.txt
flasher-environment/org.lua-lua/: CMakeLists.txt
flasher-environment/org.lua-lua/patches/: 001_enable_compatibility_options_in_lua_conf.diff  002_add_setprogdir_for_gnu_linux.diff  003_set_standard_muhkuh_paths.diff
flasher-environment/org.lua-lua/templates/: CMakeLists.txt  lua_dll.rc  lua_exe.rc
flasher-environment/org.lua-lua/templates/cmake/: config.cmake.in
flasher-environment/org.muhkuh.lua-archive/: CMakeLists.txt
flasher-environment/org.muhkuh.lua-archive/lua-archive/: CMakeLists.txt  archive.i  wrapper.cpp  wrapper.h
flasher-environment/org.muhkuh.lua-mhash/: CMakeLists.txt
flasher-environment/org.muhkuh.lua-mhash/libmhash/: CMakeLists.txt
flasher-environment/org.muhkuh.lua-mhash/libmhash/templates/: CMakeLists.txt  mhash_config.h.in
flasher-environment/org.muhkuh.lua-mhash/libmhash/templates/include/mutils/: mglobal.h
flasher-environment/org.muhkuh.lua-mhash/libmhash/templates/lib/: crc16.c  hilrom.c  mhash.c  mhash_crc16.h  mhash_hilrom.h
flasher-environment/org.muhkuh.lua-mhash/mhash/: CMakeLists.txt  mhash.i  mhash_state.cpp  mhash_state.h  muhkuh_typemaps.i
flasher-environment/org.muhkuh.tools-muhkuh_base_cli/: CMakeLists.txt
flasher-environment/org.muhkuh.tools-muhkuh_base_cli/lua/: muhkuh.lua  select_plugin_cli.lua  tester_cli.lua  utils.lua
helper_binaries/netx90/: set_kek.usp
helper_binaries/netx90_usip/: disable_secure_boot_app.usp  disable_secure_boot_app.xml  disable_secure_boot_com.usp  disable_secure_boot_com.xml  disable_security_settings.xml  disable_security_settings_app.xml  disable_security_settings_com.xml  set_sip_protection_cookie.xml
jonchki/: cli_args.py  platform_detect.py
jonchki/org.muhkuh.tools.flasher/: lua5.1-flasher.xml  lua5.4-flasher.pom  lua5.4-flasher.xml
jonchki/org.muhkuh.tools.flasher_cli/: finalizer.lua  flasher_cli.xml  jonchkicfg.xml
lua/: cli_flash.lua  demo_getBoardInfo.lua  erase_complete_flash.lua  erase_first_flash_sector.lua  erase_first_flash_sector_intflash0.lua  erase_first_flash_sector_intflash1.lua  erase_first_flash_sector_intflash2.lua  flash_intflash0.lua  flash_intflash1.lua  flash_intflash2.lua  flash_parflash.lua  flash_serflash.lua  flash_write_dummy_data.lua  flasher_test.lua  get_erase_areas_parflash.lua  identify_intflash0.lua  identify_parflash.lua  identify_serflash.lua  is_erased_parflash.lua  netx90mpw_iflash.lua  read_bootimage.lua  read_bootimage_intflash0.lua  read_bootimage_intflash2.lua  read_complete_flash.lua  read_info_pages_for_analysis_at_hilscher.lua  restore_first_flash_sector.lua  sdi_Winbond_W25Q256FV_set_QE.lua  sdi_read_jedec_id.lua  smart_erase_complete_flash.lua  test_netx90_intflash.lua  test_sqi_flash_nxhx4000.lua  usip_player.lua  wfp.lua  wfp_verify.lua
lua/lua/: Version.lua  flasher_helper.lua  helper_files.lua  muhkuh_cli_init.lua  sipper.lua  usip_generator.lua  (+6 more)
regression/: .gitignore  config.py  readme.md  readme_dev_branch.md  test_config.json  test_regression.py  test_regression_.py  version.json
site_scons/: build_properties.py  scons_common.py  spi_flashes.py  svnversion.py  zip_package.py
src/: cfi_flash.c  cfi_flash.h  drv_spi_hsoc_v1.c  drv_spi_hsoc_v2.c  drv_sqi.c  flasher_interface.h  flasher_parflash.c  flasher_parflash.h  flasher_sdio.c  flasher_spi.c  flasher_spi.h  main.c  main.h  netx_consoleapp.c  parflash_common.c  progress_bar.c  reset.c  reset.h  sfdp.c  sfdp.h  spansion.c  spansion.h  spi.h  spi_atmega.c  spi_atmega.h  spi_atmega_types.h  spi_flash.c  spi_flash.h  spi_flash_types.c  spi_flash_types.xml  strata.c
templates/: flasher.lua  flasher_version.h  flasher_version.lua  scons.bat  scons.sh  site_init.py  sqitest.lua
testbench/: cli_flash.lua  flasher.lua
(+70 files in other folders)
